Fix Shipping page on iPhone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1511,6 +1511,8 @@ html.dark {
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   background: var(--header-bg-color);
 }
 @media (max-width: 991.98px) {
@@ -2833,7 +2835,7 @@ html.dark {
   }
 }
 .form__dialog-heading {
-  padding: 14px;
+  padding: 20px;
   font-size: 1.8rem;
   font-weight: 600;
   text-align: center;
@@ -2865,12 +2867,15 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__search {
-    height: 42px;
+    height: 48px;
+  }
+  .form__search-icon {
+    width: 20px;
   }
 }
 @media (max-width: 575.98px) {
   .form__search {
-    margin: 10px 20px 0;
+    margin: 10px 30px 0;
     padding: 0 14px;
     border-radius: 10px;
     border: 1px solid #d2d1d6;
@@ -2881,6 +2886,11 @@ html.dark {
   margin-top: 10px;
   overflow-y: auto;
   overscroll-behavior: contain;
+}
+@supports (-webkit-touch-callout: none) {
+  .form__options-list {
+    padding-bottom: 300px;
+  }
 }
 .form__option {
   padding: 8px 20px;
@@ -2896,7 +2906,8 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__option {
-    padding: 14px 20px;
+    padding: 18px 30px;
+    font-size: 1.6rem;
   }
 }
 .form__error {
@@ -3077,7 +3088,7 @@ html.dark {
   flex: 1px;
   height: 100%;
   padding-left: 15px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 500;
   line-height: 142.857%;
 }
