--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -155,7 +155,7 @@ $error-color: #ed4337;
     }
 
     &__dialog-heading {
-        padding: 14px;
+        padding: 20px;
         font-size: 1.8rem;
         font-weight: 600;
         text-align: center;
@@ -192,11 +192,15 @@ $error-color: #ed4337;
         }
 
         @include abstracts.screen(lg) {
-            height: 42px;
+            height: 48px;
+
+            &-icon {
+                width: 20px;
+            }
         }
 
         @include abstracts.screen(sm) {
-            margin: 10px 20px 0;
+            margin: 10px 30px 0;
             padding: 0 14px;
             border-radius: 10px;
             border: 1px solid #d2d1d6;
@@ -208,6 +212,10 @@ $error-color: #ed4337;
         margin-top: 10px;
         overflow-y: auto;
         overscroll-behavior: contain;
+
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 300px;
+        }
     }
 
     &__option {
@@ -225,7 +233,8 @@ $error-color: #ed4337;
         }
 
         @include abstracts.screen(lg) {
-            padding: 14px 20px;
+            padding: 18px 30px;
+            font-size: 1.6rem;
         }
     }
 
